<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="vertical"
    android:gravity="bottom"
    android:background="@color/io_background"
    android:padding="30dp">
    <TextView
        android:id="@+id/txtInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="30sp"
        android:textColor="#442C2E"
        tools:text="5+10-3"/>
    <TextView
        android:id="@+id/txtOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="50sp"
        android:textColor="@color/pink"
        tools:text="12"/>


</LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:background="@color/brown">
        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/clear"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOpenBracket"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/bracket_open"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCloseBracket"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/bracket_close"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDivide"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/division"/>
        </TableRow>
        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/_7"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/_8"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/_9"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMultiply"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/multiplication"/>
        </TableRow>
        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/_4"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/_5"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/_6"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSub"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/subtract"/>
        </TableRow>
        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/_1"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/_2"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/_3"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddition"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/addition"/>
        </TableRow>
        <TableRow>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/_0"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDecimal"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                style="@style/Button_Style"
                android:text="@string/point"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnIsEqualTo"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                style="@style/Button_Style"
                android:text="@string/is_equal_to"/>

        </TableRow>
    </TableLayout>


</LinearLayout>